[project]
name = "hnh"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jeonghoon2", email = "ukidd12@naver.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "transformers>=4.45.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
